[project]
name = "spananien"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geojson>=3.1.0",
    "gpxpy>=1.6.2",
]

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "ruff>=0.8.1",
]

[tool.ruff]
line-length = 88
select = ["ALL"]
